--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -4,7 +4,7 @@ handlers=java.util.logging.ConsoleHandler
 
 # Set the console handler level (logs equal to or above this level will be shown in console)
 java.util.logging.ConsoleHandler.level=ALL
-
+java.util.logging.ConsoleHandler.useParentHandlers=false
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
 # Defining custom format for the SimpleFormatter
@@ -12,6 +12,4 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 # %4$s - Log level (e.g., INFO, WARNING)
 # %2$s - Logger name
 # %5$s - Log message
-java.util.logging.SimpleFormatter.format=%1$tF %1$tT %4$s %2$s: %5$s %n
-
-io.github.gaol.git_rev_missing=FINE
+java.util.logging.SimpleFormatter.format=%1$tF %1$tT [%4$-7s] %3$s - %5$s%n
