--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>git-rev-missing</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
     <packaging>jar</packaging>
     <name>Git Revision Missing</name>
     <description>A simple Java API to list missing commits between 2 versions</description>
@@ -31,7 +31,7 @@
 		<connection>scm:git:git@github.com:gaol/git-rev-missing.git</connection>
 		<developerConnection>scm:git:git@github.com:gaol/git-rev-missing.git</developerConnection>
 		<url>https://github.com/gaol/git-rev-missing</url>
-		<tag>HEAD</tag>
+		<tag>0.0.4</tag>
 	</scm>
 
 	<developers>
