--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jboss</groupId>
-        <artifactId>jboss-parent</artifactId>
-        <version>43</version>
+        <groupId>io.github.gaol</groupId>
+        <artifactId>java-parent</artifactId>
+        <version>1.0.1</version>
     </parent>
-
     <artifactId>git-rev-missing</artifactId>
     <version>0.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
